<resources>
    <string name="app_name">TP2</string>
    <string name="votre_nom">Votre nom ?</string>
    <string name="entrez">entrez</string>
    <string name="tester_vos_connaissances">Tester vos connaissances ?</string>
    <string name="maths">Maths</string>
    <string name="francais">Francais</string>
    <string name="verifier">Verifier</string>
    <string name="sais_tu_multiplier">Sais-tu multiplier, %1$s ?</string>
</resources>
